--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -1,8 +1,7 @@
 
 ZK_CLUSTER=172.27.128.32:12200
-ZK_PATH=/standalone
-#ZK_CLUSTER=127.0.0.1:6181
-#ZK_PATH=/cluster
+#ZK_PATH=/standalone
+ZK_PATH=/cluster
 #ZK_PATH=/rtidb_fe
 ZK_NS=featuredb
 PARTITION_NUM=4
@@ -21,3 +20,11 @@ commonCol=uUserId,zChannel,uSex,zUserId,uPlayGame,uHasJoinedGroup,eventTime,uWat
 #ddlUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.txt.ddl.txt
 #scriptUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.txt
 #relationUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.relation.txt
+
+#only for stability
+PUT_THREAD_NUM=1
+QUERY_THREAD_NUM=1
+NEED_CREATE=true
+#request:batch_request
+REQUEST_RATIO=0.75
+PROCEDURE_RATIO=0.5
