benchmark case fix

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -8,6 +8,7 @@ ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=batchrequest
 BATCH_SIZE=50
+#HTTP_PROXY=true
 
 ddlUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt.ddl.txt
 scriptUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt
