--- a/cases/integration/v1/test_last_join.yaml
+++ b/cases/integration/v1/test_last_join.yaml
@@ -925,9 +925,9 @@ cases:
         indexs: ["index1:c1:c4"]
         rows:
           - ["aa",true,3.1,1590738989000,"2020-05-01","aa"]
-          - ["bb",2.2,3.3,1590738990000,"2020-05-03","ab"]
-          - ["bb",2.5,3.6,1590738991000,"2020-05-04","bc"]
-          - ["bb",2.4,3.1,1590738992000,"2020-05-02","bb"]
+          - ["bb",true,3.3,1590738990000,"2020-05-03","ab"]
+          - ["bb",false,3.6,1590738991000,"2020-05-04","bc"]
+          - ["bb",true,3.1,1590738992000,"2020-05-02","bb"]
     sql: select {0}.c1,{0}.c2,{1}.c3,{1}.c4 from {0} last join {1} ORDER BY {1}.c2 on {0}.c1={1}.c1;
     expect:
       success: false
@@ -973,5 +973,5 @@ cases:
       columns: ["c1 string","c2 bool","c3 bigint","c4 timestamp"]
       order: c1
       rows:
-        - ["aa",2,3,1590738989000]
-        - ["bb",21,31,1590738992000]
+        - ["aa",true,3,1590738989000]
+        - ["bb",false,31,1590738992000]
