--- a/cases/integration/v1/window/test_window_row.yaml
+++ b/cases/integration/v1/window/test_window_row.yaml
@@ -698,7 +698,7 @@ cases:
       SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","c3 int","w1_c4_sum bigint"]
+      columns: ["id int","c1 string","c3 smallint","w1_c4_sum bigint"]
       rows:
         - [1,"aa",20,30]
         - [2,"bb",20,61]
@@ -724,24 +724,21 @@ cases:
       order: id
       columns: ["id int","c1 string","c2 bool","w1_c4_sum bigint"]
       rows:
-        - [1,true,20,30]
-        - [2,true,20,61]
-        - [3,true,20,93]
-        - [4,true,20,96]
-        - [5,false,21,34]
+        - [1,"aa",true,30]
+        - [2,"bb",true,61]
+        - [3,"cc",true,93]
+        - [4,"dd",true,96]
+        - [5,"ee",false,34]
   -
     id: 32
     desc: no partition by
+    tags: ["TODO","@chenjing 直接JVM错误，期望返回失败原因"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
         indexs: ["index1:c3:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
+#        rows:
+#          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
     sql: |
       SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
@@ -846,16 +843,16 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND 1);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND 1 PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
       rows:
-        - ["aa",20,30]
-        - ["aa",21,61]
-        - ["aa",22,93]
-        - ["aa",23,96]
-        - ["bb",24,34]
+        - ["aa",20,0]
+        - ["aa",21,30]
+        - ["aa",22,61]
+        - ["aa",23,63]
+        - ["bb",24,0]
   -
     id: 39
     desc: rows 0-2
@@ -870,7 +867,7 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND 0);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND 0 PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
@@ -882,30 +879,6 @@ cases:
         - ["bb",24,34]
   -
     id: 40
-    desc: rows 0-2
-    inputs:
-      -
-        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
-    sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND 0);
-    expect:
-      order: c3
-      columns: ["c1 string","c3 int","w1_c4_sum bigint"]
-      rows:
-        - ["aa",20,30]
-        - ["aa",21,61]
-        - ["aa",22,93]
-        - ["aa",23,96]
-        - ["bb",24,34]
-  -
-    id: 41
     desc: rows -1-2
     inputs:
       -
@@ -918,7 +891,7 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND -1);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND -1 PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
