--- a/cases/integration/v1/window/test_window_row_range.yaml
+++ b/cases/integration/v1/window/test_window_row_range.yaml
@@ -771,7 +771,6 @@ cases:
               DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
 
     expect:
-<<<<<<< HEAD
       order: c3
       columns: [ "c1 string", "c3 int", "c7 timestamp",  "w1_c4_sum double", "w2_c4_sum double" ]
       rows:
@@ -784,6 +783,7 @@ cases:
         - [ "aa", 7, 1590738999000, 1.0, 1.0 ]
         - [ "aa", 8, 1590739001000, 2.0, 2.0 ]
         - [ "aa", 9, 1590739002000, 3.0, 2.0 ]
+
   - id: 27
     desc: ROWS and ROWS_RANGE Current History Window with MaxSize Merge
     inputs:
@@ -829,6 +829,7 @@ cases:
         - [ "aa", 8, 1590739001000, 4.0, 3.0 ]
         - [ "aa", 9, 1590739002000, 4.0, 3.0 ]
       success: false
+
   -
     id: 28
     desc: 匿名窗口
@@ -887,7 +888,7 @@ cases:
       SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       order: id
-      columns: ["id int","c1 string","c3 int","w1_c4_sum bigint"]
+      columns: ["id int","c1 string","c3 smallint","w1_c4_sum bigint"]
       rows:
         - [1,"aa",20,30]
         - [2,"bb",20,61]
@@ -913,14 +914,15 @@ cases:
       order: id
       columns: ["id int","c1 string","c2 bool","w1_c4_sum bigint"]
       rows:
-        - [1,true,20,30]
-        - [2,true,20,61]
-        - [3,true,20,93]
-        - [4,true,20,96]
-        - [5,false,21,34]
+        - [1,"aa",true,30]
+        - [2,"bb",true,61]
+        - [3,"cc",true,93]
+        - [4,"dd",true,96]
+        - [5,"ee",false,34]
   -
     id: 32
     desc: no partition by
+    tags: ["TODO"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -993,12 +995,6 @@ cases:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
         indexs: ["index1:c8:c4"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.1,2.1,1590738990000,"2020-05-01"]
-          - [3,"cc",20,32,1.1,2.1,1590738990000,"2020-05-01"]
-          - [4,"dd",20,33,1.1,2.1,1590738990000,"2020-05-01"]
-          - [5,"ee",21,34,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
       SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c8 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
@@ -1042,7 +1038,7 @@ cases:
         - [1,"aa",30,1]
         - [2,"bb",31,2]
         - [3,"cc",32,3]
-        - [4,"dd",33,3]
+        - [4,"dd",33,4]
         - [5,"ee",34,1]
   -
     id: 39
@@ -1050,7 +1046,7 @@ cases:
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c3:c4"]
+        indexs: ["index1:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
           - [2,"bb",20,31,1.1,2.1,1590738990001,"2020-05-01"]
@@ -1074,7 +1070,7 @@ cases:
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c3:c4"]
+        indexs: ["index1:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755660000,"2020-05-01"]
           - [2,"bb",20,31,1.1,2.1,1606755720000,"2020-05-01"]
@@ -1098,7 +1094,7 @@ cases:
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c3:c4"]
+        indexs: ["index1:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606755600000,"2020-05-01"]
           - [2,"bb",20,31,1.1,2.1,1606759200000,"2020-05-01"]
@@ -1106,7 +1102,7 @@ cases:
           - [4,"dd",20,33,1.1,2.1,1606766400000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.2,1606766400000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2m PRECEDING AND CURRENT ROW);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2h PRECEDING AND CURRENT ROW);
     expect:
       order: id
       columns: ["id int","c1 string","c4 bigint","w1_c4_count bigint"]
@@ -1122,7 +1118,7 @@ cases:
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c3:c4"]
+        indexs: ["index1:c3:c7"]
         rows:
           - [1,"aa",20,30,1.1,2.1,1606752000000,"2020-05-01"]
           - [2,"bb",20,31,1.1,2.1,1606838400000,"2020-05-01"]
@@ -1130,7 +1126,7 @@ cases:
           - [4,"dd",20,33,1.1,2.1,1607011200000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.2,1606752000000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2m PRECEDING AND CURRENT ROW);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2d PRECEDING AND CURRENT ROW);
     expect:
       order: id
       columns: ["id int","c1 string","c4 bigint","w1_c4_count bigint"]
@@ -1154,16 +1150,16 @@ cases:
           - [4,"dd",20,33,1.1,2.1,1590738990000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND 1);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND 1 PRECEDING);
     expect:
       order: id
       columns: ["id int","c1 string","c4 bigint","w1_c4_count bigint"]
       rows:
-        - [1,"aa",30,1]
-        - [2,"bb",31,2]
-        - [3,"cc",32,3]
-        - [4,"dd",33,3]
-        - [5,"ee",34,1]
+        - [1,"aa",30,0]
+        - [2,"bb",31,1]
+        - [3,"cc",32,2]
+        - [4,"dd",33,2]
+        - [5,"ee",34,0]
   -
     id: 44
     desc: bigint为order by-前后都不加单位，0-2
@@ -1178,7 +1174,7 @@ cases:
           - [4,"dd",20,33,1.1,2.1,1590738990000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND 0);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND 0 PRECEDING);
     expect:
       order: id
       columns: ["id int","c1 string","c4 bigint","w1_c4_count bigint"]
@@ -1202,7 +1198,7 @@ cases:
           - [4,"dd",20,33,1.1,2.1,1590738990000,"2020-05-01"]
           - [5,"ee",21,34,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND -1);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c4 ROWS_RANGE BETWEEN 2 PRECEDING AND -1 PRECEDING);
     expect:
       order: id
       columns: ["id int","c1 string","c4 bigint","w1_c4_count bigint"]
@@ -1226,16 +1222,16 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 1s);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 1s PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
       rows:
-        - ["aa",20,30]
-        - ["aa",21,61]
-        - ["aa",22,93]
-        - ["aa",23,96]
-        - ["bb",24,34]
+        - ["aa",20,0]
+        - ["aa",21,30]
+        - ["aa",22,61]
+        - ["aa",23,63]
+        - ["bb",24,0]
   -
     id: 47
     desc: timestamp为order by-2s-0s
@@ -1250,7 +1246,7 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 0s);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 0s PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
@@ -1274,7 +1270,7 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 0);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 0 PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
@@ -1293,21 +1289,21 @@ cases:
         indexs: ["index1:c1:c7"]
         rows:
           - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+          - ["aa",21,31,1.2,2.2,1590738990001,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738990002,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738990003,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738990004,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 1);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND 1 PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
       rows:
-        - ["aa",20,30]
-        - ["aa",21,61]
-        - ["aa",22,93]
-        - ["aa",23,96]
-        - ["bb",24,34]
+        - ["aa",20,0]
+        - ["aa",21,30]
+        - ["aa",22,61]
+        - ["aa",23,93]
+        - ["bb",24,0]
   -
     id: 50
     desc: timestamp为order by-前后单位不一样
@@ -1322,13 +1318,13 @@ cases:
           - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
           - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
     sql: |
-      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2m PRECEDING AND 1s);
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2m PRECEDING AND 1s PRECEDING);
     expect:
       order: c3
       columns: ["c1 string","c3 int","w1_c4_sum bigint"]
       rows:
-        - ["aa",20,30]
-        - ["aa",21,61]
-        - ["aa",22,93]
-        - ["aa",23,96]
-        - ["bb",24,34]
+        - ["aa",20,0]
+        - ["aa",21,30]
+        - ["aa",22,61]
+        - ["aa",23,93]
+        - ["bb",24,0]
