--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -1,14 +1,14 @@
 
-ZK_CLUSTER=172.27.128.32:12200
-#ZK_CLUSTER=127.0.0.1:6181
+#ZK_CLUSTER=172.27.128.32:12200
+ZK_CLUSTER=127.0.0.1:6181
 #ZK_PATH=/standalone
 ZK_PATH=/cluster
 #ZK_PATH=/rtidb_fe
 ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=batchrequest
-BATCH_SIZE=50
-#HTTP_PROXY=true
+BATCH_SIZE=1
+HTTP_PROXY=true
 
 ddlUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt.ddl.txt
 scriptUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt
