--- a/cases/integration/v1/expression/test_arithmetic.yaml
+++ b/cases/integration/v1/expression/test_arithmetic.yaml
@@ -190,7 +190,7 @@ cases:
         rows:
           - [1,"bb",0,20,30,11.1,12.1,1590738989001,"2020-05-02",true]
     dataProvider:
-      - ["{0}.c2","{0}.c3","{0}.c4","{0}.c5","{0}.c6","{0}.c7","{0}.c9"]
+      - ["{0}.c2","{0}.c3","{0}.c4","{0}.c9"]
     sql: select d[0] + {1}.c2 as b2,d[0] + {1}.c3 as b3,d[0] + {1}.c4 as b4,d[0] + {1}.c5 as b5,d[0] + {1}.c6 as b6,d[0] + {1}.c7 as b7,d[0] + {1}.c9 as b9 from {0} last join {1} ORDER BY {1}.c7 on {0}.id={1}.id;
     expectProvider:
       0:
@@ -206,21 +206,9 @@ cases:
         rows:
           - [30,50,60,41.1,42.1,1590738989031,31]
       3:
-        columns: ["b2 float","b3 float","b4 float","b5 float","b6 double","b7 float","b9 float"]
-        rows:
-          - [30,50,60,41.1,42.1,1590738989031,31]
-      4:
-        columns: ["b2 double","b3 double","b4 double","b5 double","b6 double","b7 double","b9 double"]
-        rows:
-          - [30,50,60,41.1,42.1,1590738989031,31]
-      5:
-        columns: ["b2 timestamp","b3 timestamp","b4 timestamp","b5 float","b6 double","b7 timestamp","b9 timestamp"]
-        rows:
-          - [1590738989000,1590738989020,1590738989030,1590738989011.1,1590738989012.1,3181477978001,1590738989001]
-      6:
         columns: ["b2 smallint","b3 int","b4 bigint","b5 float","b6 double","b7 timestamp","b9 bool"]
         rows:
-          - [0,20,30,11.1,12.1,1590738989001,1]
+          - [0,20,30,11.1,12.1,1590738989001,true]
   - id: 6
     desc: "浮点型+_正确"
     inputs:
