--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,27 +94,27 @@ build:
 #     variables:
 #       - $ENV_BUILD == "daily"
 
-fpga_c++_ut:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
-  tags:
-    - fpga
-  stage: manual
-  script:
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && bash steps/fpga_compile.sh
-    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
-  artifacts:
-    reports:
-      junit:
-        - reports/*.xml
-  dependencies:
-    - build
-  except:
-    variables:
-      - $ENV_BUILD == "daily"
-  when: manual
+#fpga_c++_ut:
+#  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
+#  tags:
+#    - fpga
+#  stage: manual
+#  script:
+#    - source /root/.bashrc && sh tools/install_fesql.sh
+#    - ln -sf /depends/thirdparty thirdparty
+#    - ln -sf /depends/thirdsrc thirdsrc
+#    - source /root/.bashrc && bash steps/fpga_compile.sh
+#    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
+#  artifacts:
+#    reports:
+#      junit:
+#        - reports/*.xml
+#  dependencies:
+#    - build
+#  except:
+#    variables:
+#      - $ENV_BUILD == "daily"
+#  when: manual
 #mac_build:
 #  variables:
 #    CICD_RUNNER_TAG: "rtidb_mac"
