--- a/java/pom.xml
+++ b/java/pom.xml
@@ -75,12 +75,12 @@
 
   <distributionManagement>
     <repository>
-      <id>4pd-nexus</id>
+      <id>4pd-nexus-releases</id>
       <uniqueVersion>true</uniqueVersion>
       <url>https://nexus.4pd.io/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>4pd-nexus</id>
+      <id>4pd-nexus-snapshots</id>
       <uniqueVersion>true</uniqueVersion>
       <url>https://nexus.4pd.io/repository/maven-snapshots/</url>
     </snapshotRepository>
