--- a/cases/integration/v1/test_udaf_function.yaml
+++ b/cases/integration/v1/test_udaf_function.yaml
@@ -459,5 +459,30 @@ cases:
         - [10, 3]
         - [11, 6]
         - [12, 3]
-
-
+  -
+    id: 18
+    desc: 重复的聚合表达式
+    inputs:
+      -
+        columns : ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3,
+      sum(c4) OVER w1 as w1_c4_sum,
+      sum(c4) OVER w1 as w1_c4_sum2
+      FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
+    expect:
+      order: c3
+      columns: ["c1 string","c3 int","w1_c4_sum bigint", "w1_c4_sum2 bigint"]
+      rows:
+        - ["aa",20,30, 30]
+        - ["aa",21,61, 61]
+        - ["aa",22,93, 93]
+        - ["aa",23,96, 96]
+        - ["bb",24,34, 34]
