--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -7,6 +7,7 @@ ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=batchrequest
 BATCH_SIZE=50
+TIME_DIFF=0
 
 ddlUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt.ddl.txt
 scriptUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt
@@ -25,6 +26,7 @@ commonCol=uUserId,zChannel,uSex,zUserId,uPlayGame,uHasJoinedGroup,eventTime,uWat
 PUT_THREAD_NUM=1
 QUERY_THREAD_NUM=1
 NEED_CREATE=true
+PK_NUM=100000
 #request:batch_request
 REQUEST_RATIO=0.75
 PROCEDURE_RATIO=0.5
