--- a/cases/integration/v1/expression/test_type.yaml
+++ b/cases/integration/v1/expression/test_type.yaml
@@ -2,7 +2,7 @@ db: test_zw
 debugs: []
 cases:
   - id: 0
-    desc: "case_各种类型_正确"
+    desc: "cast_各种类型_正确"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -34,7 +34,7 @@ cases:
         rows:
           - [false,0,0,0,0.0,0.0,0,0]
   - id: 1
-    desc: "case_timestamp/string_正确"
+    desc: "cast_timestamp/string_正确"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -54,7 +54,7 @@ cases:
         rows:
           - [true,-20536,1601089480,1590738989000,1590738989000,1590738989000,1590738989000,"2020-05-29","2020-05-29 15:56:29"]
   - id: 2
-    desc: "case_string_正确"
+    desc: "cast_string_正确"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 string","c3 string","c4 string","c5 string","c6 string","c7 string","c8 string","c9 string","ts1 timestamp"]
@@ -69,7 +69,7 @@ cases:
         rows:
           - [false,30,30,30,30.0,30.0,1590738989000,"2020-05-01",aa]
   - id: 3
-    desc: "case_date_正确"
+    desc: "cast_date_正确"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -86,7 +86,7 @@ cases:
         rows:
           - [true,1588262400000,"2020-05-01","2020-05-01"]
   - id: 4
-    desc: "case_其他类型_date_错误"
+    desc: "cast_其他类型_date_错误"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -99,7 +99,7 @@ cases:
     expect:
       success: false
   - id: 5
-    desc: "case_date_其他类型_错误"
+    desc: "cast_date_其他类型_错误"
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
