--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -1,13 +1,14 @@
 
 ZK_CLUSTER=172.27.128.32:12200
 #ZK_PATH=/standalone
-ZK_PATH=/cluster
+#ZK_PATH=/cluster
 #ZK_PATH=/rtidb_fe
+ZK_PATH=/stable_test
 ZK_NS=featuredb
 PARTITION_NUM=4
-MODE=batchrequest
+MODE=request
 BATCH_SIZE=50
-TIME_DIFF=0
+TIME_DIFF=1
 
 ddlUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt.ddl.txt
 scriptUrl=http://172.27.128.37:8999/fz_ddl/myhug.txt
