--- a/cases/plan/error_query.yaml
+++ b/cases/plan/error_query.yaml
@@ -23,4 +23,16 @@ cases:
       select sum(c1) over w2 as f1 from t1 window
       w1 as (partition by key1 order by ts1 rows between 10 preceding and current row);
 
-
+  - id: 4
+    desc: ROWS窗口不支持配置MAXSIZE
+    sql: |
+      SELECT
+      sum(col2) OVER w1 as w1_col2_sum
+      FROM t1
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW MAXSIZE 20) limit 10;
+  - id: 5
+    desc: 匿名ROWS窗口不支持配置MAXSIZE
+    sql: |
+      SELECT
+      sum(col2) OVER (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW MAXSIZE 20) as w1_col2_sum
+      FROM t1;
