--- a/cases/plan/window_query.yaml
+++ b/cases/plan/window_query.yaml
@@ -182,22 +182,15 @@ cases:
     desc: window ROWS_RANGE with MAXSIZE
     sql: |
       SELECT
-      sum(col2) OVER w1 as w1_col2_sum,
+      sum(col2) OVER w1 as w1_col2_sum
       FROM t1
       WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 5) limit 10;
-  - id: 23
-    desc: window ROWS with MAXSIZE
-    sql: |
-      SELECT
-      sum(col2) OVER w1 as w1_col2_sum,
-      FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW MAXSIZE 5) limit 10;
   - id: 24
     desc: window ROWS and ROWS_RANGE with MAXSIZE
     sql: |
       SELECT
       sum(col2) OVER w1 as w1_col2_sum,
-      sum(col2) OVER w2 as w1_col2_sum,
-      FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW MAXSIZE 5),
-      WINDOW w2 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 5) limit 10;
+      sum(col2) OVER w2 as w1_col2_sum
+      FROM t1 WINDOW
+      w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW),
+      w2 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 20) limit 10;
