--- a/cases/integration/error/error_window.yaml
+++ b/cases/integration/error/error_window.yaml
@@ -3,6 +3,7 @@ debugs: []
 cases:
   - id: 0
     desc: no order by
+    tags: ["TODO","bug-待修复"]
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c8:c4" ]
@@ -12,6 +13,7 @@ cases:
       success: false
   - id: 1
     desc: no partition by
+    tags: ["TODO","bug-待修复"]
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c8:c4" ]
