test: update jmh

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -2,9 +2,9 @@
 ZK_CLUSTER=172.27.128.32:12200
 #ZK_CLUSTER=127.0.0.1:6181
 #ZK_PATH=/standalone
-ZK_PATH=/cluster
+#ZK_PATH=/cluster
 #ZK_PATH=/rtidb_fe
-#ZK_PATH=/stable_test
+ZK_PATH=/stable_test
 ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=request
@@ -26,10 +26,11 @@ commonCol=uUserId,zChannel,uSex,zUserId,uPlayGame,uHasJoinedGroup,eventTime,uWat
 #relationUrl=http://172.27.128.37:8999/fz_ddl/batch_request100680.relation.txt
 
 #only for stability
+METHOD=insert,query
 PUT_THREAD_NUM=1
 QUERY_THREAD_NUM=1
-NEED_CREATE=true
-PK_NUM=100000
+NEED_CREATE=false
+PK_NUM=50
 #request:batch_request
-REQUEST_RATIO=0.75
+REQUEST_RATIO=1.0
 PROCEDURE_RATIO=0.5
