feat:add skew ut

--- a/java/fesql-spark/pom.xml
+++ b/java/fesql-spark/pom.xml
@@ -64,7 +64,13 @@
 			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<resources>
